scalable_apps_iconsdir = join_paths(apps_iconsdir, 'scalable')

regular_files = [
    # DO NOT REMOVE: Begining of regular segment
    'CMakeSetup.svg',
    'QtProject-designer.svg',
    'TeamViewer.svg',
    'Zoom.svg',
    'abiword.svg',
    'accessories-character-map.svg',
    'alacritty.svg',
    'android-studio-canary.svg',
    'androidstudio.svg',
    'anydesk.svg',
    'assistant.svg',
    'atomix.svg',
    'audacity.svg',
    'bitwarden.svg',
    'bitwig-studio.svg',
    'bleachbit.svg',
    'blender.svg',
    'brave-desktop.svg',
    'btop.svg',
    'calibre-ebook-edit.svg',
    'calibre-viewer.svg',
    'calibre.svg',
    'carla-control.svg',
    'carla.svg',
    'cawbird.svg',
    'chromium-browser.svg',
    'clamtk.svg',
    'clion.svg',
    'code-oss.svg',
    'codeblocks.svg',
    'com.github.eneshecan.WhatsAppForLinux.svg',
    'com.github.rafostar.Clapper.svg',
    'com.obsproject.Studio.svg',
    'com.tonikelope.MegaBasterd.svg',
    'corectrl.svg',
    'cups.svg',
    'darktable.svg',
    'datagrip.svg',
    'dataspell.svg',
    'dbeaver.svg',
    'dev.bsnes.bsnes.svg',
    'discord-canary.svg',
    'discord.svg',
    'eclipse.svg',
    'electron.svg',
    'electrum.svg',
    'enpass.svg',
    'etcher.svg',
    'facebook-messenger.svg',
    'fgcom.svg',
    'figma.svg',
    'filezilla.svg',
    'firefox-developer-edition.svg',
    'firefox.svg',
    'firewall-config.svg',
    'fish.svg',
    'fleet.svg',
    'flightgear.svg',
    'foobar2000.svg',
    'fr.handbrake.ghb.svg',
    'freac.svg',
    'freetube.svg',
    'fuse-emulator.svg',
    'gda-browser-5.0.svg',
    'gda-control-center.svg',
    'geany.svg',
    'genymotion.svg',
    'gimp.svg',
    'github-desktop.svg',
    'gitkraken.svg',
    'gnome-aisleriot.svg',
    'gnome-nettool.svg',
    'godot.svg',
    'goland.svg',
    'google-chrome.svg',
    'google-earth.svg',
    'gparted.svg',
    'gpsd-logo.svg',
    'grapejuice-roblox-player.svg',
    'grapejuice-roblox-studio.svg',
    'grapejuice.svg',
    'grub-customizer.svg',
    'gsmartcontrol.svg',
    'gufw.svg',
    'guiscrcpy.svg',
    'hardinfo.svg',
    'headlines.svg',
    'heroic.svg',
    'hp_logo.svg',
    'htop.svg',
    'hwloc.svg',
    'insomnia.svg',
    'intellij.svg',
    'io.element.Element.svg',
    'io.github.quodlibet.ExFalso.svg',
    'io.github.quodlibet.QuodLibet.svg',
    'java-openjdk.svg',
    'jdownloader.svg',
    'jetbrains-toolbox.svg',
    'josm.svg',
    'jupyter.svg',
    'kate.svg',
    'kdenlive.svg',
    'keepassxc.svg',
    'kitty.svg',
    'kolourpaint.svg',
    'krita.svg',
    'kruler.svg',
    'kvantum.svg',
    'libreoffice-base.svg',
    'libreoffice-basic.svg',
    'libreoffice-calc.svg',
    'libreoffice-chart.svg',
    'libreoffice-draw.svg',
    'libreoffice-impress.svg',
    'libreoffice-math.svg',
    'libreoffice-startcenter.svg',
    'libreoffice-writer.svg',
    'liferea.svg',
    'linguist.svg',
    'mailspring.svg',
    'mattermost.svg',
    'mediainfo.svg',
    'menulibre.svg',
    'micro.svg',
    'microsoft-edge.svg',
    'minecraft.svg',
    'mockoon.svg',
    'mpv.svg',
    'net.kuribo64.melonDS.svg',
    'net.poedit.Poedit.svg',
    'network-wired.svg',
    'nextcloud.svg',
    'nufraw.svg',
    'nvidia.svg',
    'nvim.svg',
    'obsidian.svg',
    'one.alynx.showmethekey.svg',
    'onetagger.svg',
    'openra-cnc.svg',
    'openra-d2k.svg',
    'openra-ra.svg',
    'opera.svg',
    'org.DolphinEmu.dolphin-emu.svg',
    'org.fdroid.Repomaker.svg',
    'org.gnome.PowerStats.svg',
    'org.inkscape.Inkscape.svg',
    'org.onlyoffice.desktopeditors.svg',
    'org.parlatype.Parlatype.svg',
    'osmscout-server.svg',
    'pacseek.svg',
    'pamac.svg',
    'pavucontrol.svg',
    'phpstorm.svg',
    'pidgin.svg',
    'popcorntime.svg',
    'postman.svg',
    'preferences-desktop-theme.svg',
    'preferences-system-network.svg',
    'prismlauncher.svg',
    'projectM.svg',
    'protonmail-bridge.svg',
    'protonvpn-gui.svg',
    'pure-maps.svg',
    'pycharm.svg',
    'qdbusviewer.svg',
    'qt5ct.svg',
    'qutebrowser.svg',
    'qv4l2.svg',
    'rawtherapee.svg',
    'resolve.svg',
    'rider.svg',
    'rstudio.svg',
    'rubymine.svg',
    'saber.svg',
    'scrcpy.svg',
    'scribus.svg',
    'session-desktop.svg',
    'shotwell.svg',
    'signal-desktop.svg',
    'skypeforlinux.svg',
    'slack.svg',
    'soundconverter.svg',
    'spek.svg',
    'spotify.svg',
    'spyder.svg',
    'standard-notes.svg',
    'steam-icon.svg',
    'stellarium.svg',
    'stoken-gui.svg',
    'strawberry.svg',
    'sublime-merge.svg',
    'sublime-text.svg',
    'syncthing-gtk.svg',
    'system-software-install.svg',
    'teams.svg',
    'telegram.svg',
    'texstudio.svg',
    'thunderbird.svg',
    'todoist.svg',
    'tor-browser.svg',
    'unity-editor-icon.svg',
    'unityhub.svg',
    'viber.svg',
    'vim.svg',
    'virt-manager.svg',
    'virtualbox.svg',
    'visual-studio-code.svg',
    'vivaldi.svg',
    'vlc.svg',
    'vmware-workstation.svg',
    'vscodium.svg',
    'warpinator.svg',
    'webstorm.svg',
    'windscribe.svg',
    'xdvi.svg',
    'xsane.svg',
    'yuzu.svg',
    'zotero.svg',
    'zrythm.svg',
    # DO NOT REMOVE: End of regular segment
]

link_files = {
    # DO NOT REMOVE: Begining of link segment
    'libreoffice-startcenter.svg': [
        'libreoffice-main.svg',
        'libreoffice4.2-startcenter.svg',
        'libreoffice5.0-main.svg',
        'libreoffice5.0-startcenter.svg',
        'libreoffice5.0.svg',
        'libreoffice5.1-main.svg',
        'libreoffice5.1-startcenter.svg',
        'libreoffice5.1.svg',
        'libreoffice5.2-main.svg',
        'libreoffice5.2-startcenter.svg',
        'libreoffice5.2.svg',
        'libreoffice5.3-main.svg',
        'libreoffice5.3-startcenter.svg',
        'libreoffice5.3.svg',
        'libreoffice5.4-main.svg',
        'libreoffice5.4-startcenter.svg',
        'libreoffice5.4.svg',
        'libreoffice6.0-main.svg',
        'libreoffice6.0-startcenter.svg',
        'libreoffice6.0.svg',
        'libreoffice6.2-main.svg',
        'libreoffice6.2-startcenter.svg',
        'libreoffice6.3-main.svg',
        'libreoffice6.3-startcenter.svg',
        'libreoffice6.4-main.svg',
        'libreoffice6.4-startcenter.svg',
        'libreoffice7.0-main.svg',
        'libreoffice7.0-startcenter.svg',
        'libreoffice7.1-main.svg',
        'libreoffice7.1-startcenter.svg',
        'libreoffice7.2-main.svg',
        'libreoffice7.2-startcenter.svg',
        'libreoffice7.3-main.svg',
        'libreoffice7.3-startcenter.svg',
        'libreoffice7.4-main.svg',
        'libreoffice7.4-startcenter.svg',
        'libreoffice7.5-main.svg',
        'libreoffice7.5-startcenter.svg',
        'libreoffice7.6-startcenter.svg',
        'org.libreoffice.LibreOffice.main.svg',
        'org.libreoffice.LibreOffice.startcenter.svg',
    ],
    'vivaldi.svg': [
        'vivaldi-stable.svg',
    ],
    'virtualbox.svg': [
        'virtualbox-ose.svg',
    ],
    'Zoom.svg': [
        'us.zoom.Zoom.svg',
        'zoom-desktop.svg',
        'zoom-icon.svg',
    ],
    'cawbird.svg': [
        'uk.co.ibboard.cawbird.svg',
    ],
    'TeamViewer.svg': [
        'teamviewer.svg',
    ],
    'system-software-install.svg': [
        'synaptic.svg',
        'system-software-installer.svg',
        'system-software-update.svg',
    ],
    'carla.svg': [
        'studio.kx.carla.svg',
    ],
    'spyder.svg': [
        'spyder3.svg',
    ],
    'insomnia.svg': [
        'rest.insomnia.Insomnia.svg',
    ],
    'qv4l2.svg': [
        'qvidcap.svg',
    ],
    'scrcpy.svg': [
        'qtscrcpy.svg',
    ],
    'qt5ct.svg': [
        'qt6ct.svg',
        'qtconfig-qt4.svg',
        'qtconfig-qt5.svg',
        'qtconfig-qt6.svg',
        'qtconfig.svg',
    ],
    'popcorntime.svg': [
        'popcorn-time.svg',
        'popcorntime-ru.svg',
    ],
    'net.poedit.Poedit.svg': [
        'poedit.svg',
    ],
    'pamac.svg': [
        'pamac-manager.svg',
        'pamac-updater.svg',
    ],
    'zotero.svg': [
        'org.zotero.Zotero.svg',
    ],
    'warpinator.svg': [
        'org.x.Warpinator.svg',
    ],
    'vlc.svg': [
        'org.videolan.VLC.svg',
    ],
    'texstudio.svg': [
        'org.texstudio.TeXstudio.svg',
    ],
    'telegram.svg': [
        'org.telegram.desktop.svg',
        'telegram-desktop-bin.svg',
        'telegram-desktop.svg',
    ],
    'strawberry.svg': [
        'org.strawberrymusicplayer.strawberry.svg',
    ],
    'stellarium.svg': [
        'org.stellarium.Stellarium.svg',
    ],
    'soundconverter.svg': [
        'org.soundconverter.SoundConverter.svg',
    ],
    'signal-desktop.svg': [
        'org.signal.Signal.svg',
    ],
    'qutebrowser.svg': [
        'org.qutebrowser.qutebrowser.svg',
    ],
    'prismlauncher.svg': [
        'org.prismlauncher.PrismLauncher.svg',
    ],
    'josm.svg': [
        'org.openstreetmap.josm.svg',
    ],
    'thunderbird.svg': [
        'org.mozilla.Thunderbird.svg',
        'thunderbird-3.0.svg',
        'thunderbird-bin.svg',
        'thunderbird-icon.svg',
        'thunderbird-mozilla-build.svg',
    ],
    'pacseek.svg': [
        'org.moson.Pacseek.svg',
        'org.moson.pacseek.svg',
    ],
    'keepassxc.svg': [
        'org.keepassxc.KeePassXC.svg',
    ],
    'kolourpaint.svg': [
        'org.kde.kolourpaint.svg',
    ],
    'kdenlive.svg': [
        'org.kde.kdenlive.svg',
    ],
    'jdownloader.svg': [
        'org.jdownloader.JDownloader.svg',
    ],
    'shotwell.svg': [
        'org.gnome.Shotwell.svg',
    ],
    'gnome-aisleriot.svg': [
        'org.gnome.Aisleriot.svg',
    ],
    'gimp.svg': [
        'org.gimp.GIMP.svg',
    ],
    'geany.svg': [
        'org.geany.Geany.svg',
    ],
    'flightgear.svg': [
        'org.flightgear.FlightGear.svg',
    ],
    'fgcom.svg': [
        'org.flightgear.FGCom.svg',
    ],
    'filezilla.svg': [
        'org.filezillaproject.Filezilla.svg',
    ],
    'electrum.svg': [
        'org.electrum.electrum.svg',
    ],
    'darktable.svg': [
        'org.darktable.Darktable.svg',
    ],
    'codeblocks.svg': [
        'org.codeblocks.codeblocks.svg',
    ],
    'menulibre.svg': [
        'org.bluesabre.MenuLibre.svg',
    ],
    'audacity.svg': [
        'org.audacityteam.Audacity.svg',
    ],
    'org.onlyoffice.desktopeditors.svg': [
        'onlyoffice-desktopeditors.svg',
    ],
    'com.obsproject.Studio.svg': [
        'obs.svg',
    ],
    'nvidia.svg': [
        'nvidia-310-settings.svg',
        'nvidia-current-settings.svg',
        'nvidia-current-updates-settings.svg',
        'nvidia-ddm-mx.svg',
        'nvidia-drivers-settings.svg',
        'nvidia-settings.svg',
        'nvidia-x-server-settings.svg',
    ],
    'projectM.svg': [
        'net.sourceforge.projectM.svg',
    ],
    'liferea.svg': [
        'net.sourceforge.liferea.svg',
    ],
    'scribus.svg': [
        'net.scribus.Scribus.svg',
        'scribus-ng.svg',
        'scribus-trunk.svg',
    ],
    'openra-ra.svg': [
        'net.openra.OpenRA.svg',
    ],
    'openra-d2k.svg': [
        'net.openra.OpenRA.openra-d2k.svg',
    ],
    'openra-cnc.svg': [
        'net.openra.OpenRA.openra-cnc.svg',
    ],
    'mediainfo.svg': [
        'net.mediaarea.MediaInfo.svg',
    ],
    'grapejuice.svg': [
        'net.brinkervii.grapejuice.svg',
    ],
    'grapejuice-roblox-studio.svg': [
        'net.brinkervii.grapejuice.robloxstudio.svg',
    ],
    'grapejuice-roblox-player.svg': [
        'net.brinkervii.grapejuice.robloxplayer.svg',
    ],
    'pavucontrol.svg': [
        'multimedia-volume-control.svg',
        'org.pulseaudio.pavucontrol.svg',
    ],
    'com.tonikelope.MegaBasterd.svg': [
        'megabasterd.svg',
    ],
    'syncthing-gtk.svg': [
        'me.kozec.syncthingtk.svg',
        'syncthing.svg',
        'syncthingtray.svg',
    ],
    'libreoffice-main.svg': [
        'libreoffice7.6-main.svg',
    ],
    'libreoffice-chart.svg': [
        'libreoffice7.5-chart.svg',
        'libreoffice7.6-chart.svg',
        'org.libreoffice.LibreOffice.chart.svg',
    ],
    'libreoffice-basic.svg': [
        'libreoffice7.5-basic.svg',
        'libreoffice7.6-basic.svg',
        'org.libreoffice.LibreOffice.basic.svg',
    ],
    'libreoffice-writer.svg': [
        'libreoffice4.2-writer.svg',
        'libreoffice5.0-writer.svg',
        'libreoffice5.1-writer.svg',
        'libreoffice5.2-writer.svg',
        'libreoffice5.3-writer.svg',
        'libreoffice5.4-writer.svg',
        'libreoffice6.0-writer.svg',
        'libreoffice6.2-writer.svg',
        'libreoffice6.3-writer.svg',
        'libreoffice6.4-writer.svg',
        'libreoffice7.0-writer.svg',
        'libreoffice7.1-writer.svg',
        'libreoffice7.2-writer.svg',
        'libreoffice7.3-writer.svg',
        'libreoffice7.4-writer.svg',
        'libreoffice7.5-writer.svg',
        'libreoffice7.6-writer.svg',
        'org.libreoffice.LibreOffice.writer.svg',
    ],
    'libreoffice-math.svg': [
        'libreoffice4.2-math.svg',
        'libreoffice5.0-math.svg',
        'libreoffice5.1-math.svg',
        'libreoffice5.2-math.svg',
        'libreoffice5.3-math.svg',
        'libreoffice5.4-math.svg',
        'libreoffice6.0-math.svg',
        'libreoffice6.2-math.svg',
        'libreoffice6.3-math.svg',
        'libreoffice6.4-math.svg',
        'libreoffice7.0-math.svg',
        'libreoffice7.1-math.svg',
        'libreoffice7.2-math.svg',
        'libreoffice7.3-math.svg',
        'libreoffice7.4-math.svg',
        'libreoffice7.5-math.svg',
        'libreoffice7.6-math.svg',
        'org.libreoffice.LibreOffice.math.svg',
    ],
    'libreoffice-impress.svg': [
        'libreoffice4.2-impress.svg',
        'libreoffice5.0-impress.svg',
        'libreoffice5.1-impress.svg',
        'libreoffice5.2-impress.svg',
        'libreoffice5.3-impress.svg',
        'libreoffice5.4-impress.svg',
        'libreoffice6.0-impress.svg',
        'libreoffice6.2-impress.svg',
        'libreoffice6.3-impress.svg',
        'libreoffice6.4-impress.svg',
        'libreoffice7.0-impress.svg',
        'libreoffice7.1-impress.svg',
        'libreoffice7.2-impress.svg',
        'libreoffice7.3-impress.svg',
        'libreoffice7.4-impress.svg',
        'libreoffice7.5-impress.svg',
        'libreoffice7.6-impress.svg',
        'org.libreoffice.LibreOffice.impress.svg',
    ],
    'libreoffice-draw.svg': [
        'libreoffice4.2-draw.svg',
        'libreoffice5.0-draw.svg',
        'libreoffice5.1-draw.svg',
        'libreoffice5.2-draw.svg',
        'libreoffice5.3-draw.svg',
        'libreoffice5.4-draw.svg',
        'libreoffice6.0-draw.svg',
        'libreoffice6.2-draw.svg',
        'libreoffice6.3-draw.svg',
        'libreoffice6.4-draw.svg',
        'libreoffice7.0-draw.svg',
        'libreoffice7.1-draw.svg',
        'libreoffice7.2-draw.svg',
        'libreoffice7.3-draw.svg',
        'libreoffice7.4-draw.svg',
        'libreoffice7.5-draw.svg',
        'libreoffice7.6-draw.svg',
        'org.libreoffice.LibreOffice.draw.svg',
    ],
    'libreoffice-calc.svg': [
        'libreoffice4.2-calc.svg',
        'libreoffice5.0-calc.svg',
        'libreoffice5.1-calc.svg',
        'libreoffice5.2-calc.svg',
        'libreoffice5.3-calc.svg',
        'libreoffice5.4-calc.svg',
        'libreoffice6.0-calc.svg',
        'libreoffice6.2-calc.svg',
        'libreoffice6.3-calc.svg',
        'libreoffice6.4-calc.svg',
        'libreoffice7.0-calc.svg',
        'libreoffice7.1-calc.svg',
        'libreoffice7.2-calc.svg',
        'libreoffice7.3-calc.svg',
        'libreoffice7.4-calc.svg',
        'libreoffice7.5-calc.svg',
        'libreoffice7.6-calc.svg',
        'org.libreoffice.LibreOffice.calc.svg',
    ],
    'libreoffice-base.svg': [
        'libreoffice4.2-base.svg',
        'libreoffice5.0-base.svg',
        'libreoffice5.1-base.svg',
        'libreoffice5.2-base.svg',
        'libreoffice5.3-base.svg',
        'libreoffice5.4-base.svg',
        'libreoffice6.0-base.svg',
        'libreoffice6.2-base.svg',
        'libreoffice6.3-base.svg',
        'libreoffice6.4-base.svg',
        'libreoffice7.0-base.svg',
        'libreoffice7.1-base.svg',
        'libreoffice7.2-base.svg',
        'libreoffice7.3-base.svg',
        'libreoffice7.4-base.svg',
        'libreoffice7.5-base.svg',
        'libreoffice7.6-base.svg',
        'org.libreoffice.LibreOffice.base.svg',
    ],
    'kate.svg': [
        'kate2.svg',
        'org.kde.kate.svg',
        'org.kde.plasma.katesessions.svg',
    ],
    'jupyter.svg': [
        'jupyterlab-desktop.svg',
        'org.jupyter.JupyterLab.svg',
    ],
    'QtProject-designer.svg': [
        'io.qt.Designer.svg',
    ],
    'nvim.svg': [
        'io.neovim.nvim.svg',
        'nvim-gtk.svg',
        'nvim-qt.svg',
        'org.daa.NeovimGtk.svg',
        'pynvim.svg',
    ],
    'mpv.svg': [
        'io.mpv.Mpv.svg',
        'mpv-icon-8bit-64x64.svg',
    ],
    'headlines.svg': [
        'io.gitlab.caveman250.headlines.svg',
    ],
    'osmscout-server.svg': [
        'io.github.rinigus.OSMScoutServer.svg',
    ],
    'org.inkscape.Inkscape.svg': [
        'inkscape-logo.svg',
        'inkscape.svg',
    ],
    'pidgin.svg': [
        'im.pidgin.Pidgin.svg',
    ],
    'hp_logo.svg': [
        'hp-logo.svg',
        'hp-toolbox.svg',
        'hplip.svg',
        'hplj1020_icon.svg',
    ],
    'pure-maps.svg': [
        'harbour-pure-maps.svg',
        'io.github.rinigus.PureMaps.svg',
    ],
    'vim.svg': [
        'gvim.svg',
        'org.vim.Vim.svg',
        'vim-qt.svg',
    ],
    'google-earth.svg': [
        'google-earth-pro.svg',
        'googleearth.svg',
    ],
    'godot.svg': [
        'godot-mono.svg',
        'lutris_godot-engine.svg',
        'org.godotengine.Godot.svg',
    ],
    'kruler.svg': [
        'gnome-screenruler.svg',
        'org.kde.kruler.svg',
        'screenruler-icon.svg',
        'screenruler.svg',
    ],
    'org.gnome.PowerStats.svg': [
        'gnome-power-statistics.svg',
        'org.gnome.powerstats.svg',
    ],
    'gnome-nettool.svg': [
        'gnome-nettools.svg',
    ],
    'accessories-character-map.svg': [
        'gnome-character-map.svg',
    ],
    'genymotion.svg': [
        'genymotion-bin.svg',
        'genymotion-player.svg',
    ],
    'fuse-emulator.svg': [
        'fuse.svg',
        'net.sf.fuse_emulator.svg',
    ],
    'freetube.svg': [
        'freetube-bin.svg',
        'io.freetubeapp.FreeTube.svg',
    ],
    'firewall-config.svg': [
        'firewall-applet.svg',
    ],
    'firefox-developer-edition.svg': [
        'firefox-developer-icon.svg',
        'org.mozilla.FirefoxDevEdition.svg',
    ],
    'firefox.svg': [
        'firefox-beta-bin.svg',
        'firefox-beta.svg',
        'firefox-bin.svg',
        'firefox-default.svg',
        'firefox-esr.svg',
        'firefox-gtk3.svg',
        'firefox-icon.svg',
        'firefox-mozilla-build.svg',
        'firefox-original.svg',
        'mozilla-firefox.svg',
        'org.mozilla.Firefox.svg',
        'org.mozilla.firefox.svg',
    ],
    'figma.svg': [
        'figma-linux.svg',
        'io.github.Figma_Linux.figma_linux.svg',
    ],
    'electron.svg': [
        'electron12.svg',
        'electron16.svg',
        'electron17.svg',
        'electron18.svg',
        'electron19.svg',
        'electron2.svg',
        'electron20.svg',
        'electron4.svg',
        'electron6.svg',
        'electron9.svg',
        'io.atom.electron.BaseApp.svg',
    ],
    'eclipse.svg': [
        'eclipse-cdt.svg',
        'org.eclipse.Committers.svg',
        'org.eclipse.Java.svg',
        'org.eclipse.Javascript.svg',
    ],
    'dbeaver.svg': [
        'dbeaver-ee.svg',
        'io.dbeaver.DBeaverCommunity.svg',
    ],
    'vscodium.svg': [
        'com.vscodium.codium.svg',
    ],
    'code-oss.svg': [
        'com.visualstudio.code-oss.svg',
        'com.visualstudio.code.oss.svg',
    ],
    'viber.svg': [
        'com.viber.Viber.svg',
    ],
    'steam-icon.svg': [
        'com.valvesoftware.Steam.svg',
        'steam-launcher.svg',
        'steam.svg',
        'steampowered.svg',
    ],
    'todoist.svg': [
        'com.todoist.Todoist.svg',
        'goa-account-todoist.svg',
    ],
    'sublime-text.svg': [
        'com.sublimetext.three.svg',
        'sublime-text-2.svg',
        'sublime-text-3.svg',
        'sublime-text2.svg',
        'sublime.svg',
        'sublime_text.svg',
        'sublimetext.svg',
    ],
    'sublime-merge.svg': [
        'com.sublimemerge.App.svg',
    ],
    'slack.svg': [
        'com.slack.Slack.svg',
    ],
    'skypeforlinux.svg': [
        'com.skype.Client.svg',
        'ms-skype.svg',
        'skype.svg',
    ],
    'rawtherapee.svg': [
        'com.rawtherapee.RawTherapee.svg',
    ],
    'protonvpn-gui.svg': [
        'com.protonvpn.www.svg',
        'protonvpn-logo.svg',
    ],
    'minecraft.svg': [
        'com.mojang.Minecraft.svg',
        'lutris_minecraft.svg',
        'minecraft-launcher.svg',
        'minecraft-pi.svg',
    ],
    'microsoft-edge.svg': [
        'com.microsoft.Edge.svg',
    ],
    'mattermost.svg': [
        'com.mattermost.Desktop.svg',
        'mattermost-desktop-bin.svg',
        'mattermost-desktop.svg',
    ],
    'webstorm.svg': [
        'com.jetbrains.WebStorm.svg',
    ],
    'rubymine.svg': [
        'com.jetbrains.RubyMine.svg',
    ],
    'rider.svg': [
        'com.jetbrains.Rider.svg',
    ],
    'pycharm.svg': [
        'com.jetbrains.PyCharm-Community.svg',
        'com.jetbrains.PyCharm-Professional.svg',
    ],
    'phpstorm.svg': [
        'com.jetbrains.PhpStorm.svg',
    ],
    'intellij.svg': [
        'com.jetbrains.IntelliJ-IDEA-Community.svg',
        'com.jetbrains.IntelliJ-IDEA-Ultimate.svg',
    ],
    'goland.svg': [
        'com.jetbrains.GoLand.svg',
    ],
    'fleet.svg': [
        'com.jetbrains.Fleet.svg',
    ],
    'dataspell.svg': [
        'com.jetbrains.DataSpell.svg',
        'com.jetbrains.dataspell.svg',
        'jetbrains-dataspell.svg',
    ],
    'datagrip.svg': [
        'com.jetbrains.DataGrip.svg',
    ],
    'clion.svg': [
        'com.jetbrains.CLion.svg',
    ],
    'tor-browser.svg': [
        'com.github.micahflee.torbrowser-launcher.svg',
        'tor-browser-en.svg',
        'tor-browser-ru.svg',
        'tor.svg',
        'torbrowser.svg',
    ],
    'org.parlatype.Parlatype.svg': [
        'com.github.gkarsay.parlatype.svg',
        'parlatype.svg',
    ],
    'com.github.eneshecan.WhatsAppForLinux.svg': [
        'com.gigitux.gtkwhats.svg',
        'io.bit3.WhatsAppQT.svg',
        'io.github.mimbrero.WhatsAppDesktop.svg',
        'whatsapp-desktop.svg',
        'whatsapp-for-linux.svg',
        'whatsapp-nativefier.svg',
        'whatsapp.svg',
        'whatsdesk.svg',
    ],
    'postman.svg': [
        'com.getpostman.Postman.svg',
    ],
    'mailspring.svg': [
        'com.getmailspring.Mailspring.svg',
    ],
    'discord-canary.svg': [
        'com.discordapp.DiscordCanary.svg',
    ],
    'discord.svg': [
        'com.discordapp.Discord.svg',
    ],
    'calibre-viewer.svg': [
        'com.calibre_ebook.calibre.ebook-viewer.svg',
        'com.calibre_ebook.calibre.ebook_viewer.svg',
        'com.calibre_ebook.calibre.lrfviewer.svg',
    ],
    'calibre-ebook-edit.svg': [
        'com.calibre_ebook.calibre.ebook-edit.svg',
        'com.calibre_ebook.calibre.ebook_edit.svg',
    ],
    'bitwig-studio.svg': [
        'com.bitwig.BitwigStudio.svg',
    ],
    'anydesk.svg': [
        'com.anydesk.Anydesk.svg',
    ],
    'saber.svg': [
        'com.adilhanney.saber.svg',
    ],
    'abiword.svg': [
        'com.abisource.AbiWord.svg',
    ],
    'visual-studio-code.svg': [
        'code.svg',
        'com.visualstudio.code.svg',
        'vscode.svg',
    ],
    'clamtk.svg': [
        'clamav.svg',
        'com.gitlab.davem.ClamTk.svg',
    ],
    'chromium-browser.svg': [
        'chromium-browser-privacy.svg',
        'chromium-freeworld.svg',
        'chromium.svg',
        'org.chromium.Chromium.svg',
    ],
    'google-chrome.svg': [
        'chrome-ighkikkfkalojiibipjigpccggljgdff-Default.svg',
        'com.google.Chrome.svg',
        'google-chrome2.svg',
        'googlechrome.svg',
    ],
    'facebook-messenger.svg': [
        'caprine.svg',
        'com.sindresorhus.Caprine.svg',
    ],
    'krita.svg': [
        'calligrakrita.svg',
        'calligrakrita2.svg',
        'lutris_krita-gemini.svg',
        'org.kde.krita.svg',
    ],
    'calibre.svg': [
        'calibre-gui.svg',
        'com.calibre_ebook.calibre.svg',
    ],
    'dev.bsnes.bsnes.svg': [
        'bsnes.svg',
    ],
    'brave-desktop.svg': [
        'brave-browser.svg',
    ],
    'xsane.svg': [
        'blueman-scanner.svg',
        'com.hamrick.VueScan.svg',
        'deepin-scanner.svg',
        'gscan2pdf.svg',
        'vuescan.svg',
        'yast-scanner.svg',
    ],
    'btop.svg': [
        'bashtop.svg',
    ],
    'java-openjdk.svg': [
        'applications-java.svg',
        'java-1.6.0.svg',
        'java-1.7.0.svg',
        'java-1.8.0-openjdk.svg',
        'java-1.8.0.svg',
        'java-10-openjdk.svg',
        'java-11-openjdk.svg',
        'java-12-openjdk.svg',
        'java-13-openjdk.svg',
        'java-14-openjdk.svg',
        'java-jdk.svg',
        'java10-openjdk.svg',
        'java11-openjdk.svg',
        'java12-openjdk.svg',
        'java13-openjdk.svg',
        'java14-openjdk.svg',
        'java15-openjdk.svg',
        'java16-openjdk.svg',
        'java17-openjdk.svg',
        'java18-openjdk.svg',
        'java19-openjdk.svg',
        'java20-openjdk.svg',
        'java21-openjdk.svg',
        'java8-openjdk.svg',
        'java9-openjdk.svg',
        'javaws.svg',
        'oracle-javaws.svg',
        'oracle_java6.svg',
        'oracle_java7.svg',
        'oracle_java8.svg',
        'oracle_java9.svg',
        'sun-java-jdk10.svg',
        'sun-java-jdk5.svg',
        'sun-java-jdk6.svg',
        'sun-java-jdk7.svg',
        'sun-java-jdk8.svg',
        'sun-java-jdk9.svg',
        'sun-java-jre10.svg',
        'sun-java-jre8.svg',
        'sun-java32-jdk5.svg',
        'sun-java32-jdk6.svg',
        'sun-java32-jdk7.svg',
        'sun-java32-jdk8.svg',
        'sun-javaws-jdk10.svg',
        'sun-javaws-jdk6.svg',
        'sun-javaws-jdk7.svg',
        'sun-javaws-jdk8.svg',
        'sun-javaws-jdk9.svg',
        'sun-javaws-jre10.svg',
        'sun-javaws-jre8.svg',
        'sun-javaws32-jdk6.svg',
        'sun-javaws32-jdk7.svg',
        'sun-javaws32-jdk8.svg',
    ],
    'yuzu.svg': [
        'appimagekit-yuzu.svg',
        'org.yuzu_emu.yuzu.svg',
    ],
    'unityhub.svg': [
        'appimagekit-unityhub.svg',
        'com.unityhub.UnityHub.svg',
    ],
    'unity-editor-icon.svg': [
        'appimagekit-unityeditor.svg',
        'com.unityhub.UnityEditor.svg',
        'unityeditor.svg',
    ],
    'teams.svg': [
        'appimagekit-teams-for-linux.svg',
        'brave-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'chrome-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'com.github.IsmaelMartinez.teams_for_linux.svg',
        'com.microsoft.Teams.svg',
        'msedge-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'opera-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'teams-for-linux.svg',
        'vivaldi-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
    ],
    'standard-notes.svg': [
        'appimagekit-standard-notes.svg',
        'org.standardnotes.standardnotes.svg',
    ],
    'session-desktop.svg': [
        'appimagekit-session-desktop.svg',
    ],
    'freac.svg': [
        'appimagekit-org.freac.freac.svg',
        'org.freac.freac.svg',
    ],
    'obsidian.svg': [
        'appimagekit-obsidian.svg',
        'md.obsidian.Obsidian.svg',
    ],
    'kitty.svg': [
        'appimagekit-kitty.svg',
    ],
    'heroic.svg': [
        'appimagekit-heroic.svg',
        'com.heroicgameslauncher.hgl.svg',
    ],
    'guiscrcpy.svg': [
        'appimagekit-guiscrcpy.svg',
    ],
    'github-desktop.svg': [
        'appimagekit-github-desktop.svg',
        'io.github.shiftey.Desktop.svg',
    ],
    'bitwarden.svg': [
        'appimagekit-bitwarden.svg',
        'com.bitwarden.desktop.svg',
    ],
    'etcher.svg': [
        'appimagekit-balena-etcher-electron.svg',
        'balena-etcher-electron.svg',
        'etcher-electron.svg',
    ],
    'androidstudio.svg': [
        'android-studio.svg',
        'com.google.AndroidStudio.svg',
    ],
    'android-studio-canary.svg': [
        'android-studio-beta.svg',
        'androidstudio-preview.svg',
    ],
    'spotify.svg': [
        'Spotify.svg',
        'com.spotify.Client.svg',
        'eu.tiliado.NuvolaAppSpotify.svg',
        'nuvolaplayer3_spotify.svg',
        'spotify-client.svg',
        'spotify-linux-48x48.svg',
        'spotify-linux-512x512.svg',
        'spotify-qt.svg',
    ],
    'qdbusviewer.svg': [
        'QtProject-qdbusviewer.svg',
        'io.qt.Qdbusviewer.svg',
        'qdbusviewer-qt4.svg',
        'qdbusviewer-qt5.svg',
        'qdbusviewer5.svg',
        'qtdbusviewer.svg',
    ],
    'linguist.svg': [
        'QtProject-linguist.svg',
        'io.qt.Linguist.svg',
        'linguist-qt4.svg',
        'linguist-qt5.svg',
        'linguist5.svg',
        'qtlinguist.svg',
    ],
    'assistant.svg': [
        'QtProject-assistant.svg',
        'assistant-qt4.svg',
        'assistant-qt5.svg',
        'assistant5.svg',
        'io.qt.Assistant.svg',
        'qtassistant.svg',
    ],
    'protonmail-bridge.svg': [
        'ProtonMail_Bridge.svg',
        'ch.protonmail.protonmail-bridge.svg',
    ],
    'nextcloud.svg': [
        'Nextcloud.svg',
        'com.nextcloud.desktopclient.nextcloud.svg',
        'org.nextcloud.Nextcloud.svg',
    ],
    'gitkraken.svg': [
        'GitKraken.svg',
        'com.axosoft.GitKraken.svg',
    ],
    'io.element.Element.svg': [
        'Element.svg',
        'element-desktop-bin.svg',
        'element.svg',
        'im.riot.Riot.svg',
    ],
    'resolve.svg': [
        'DV_Resolve.svg',
        'davinci-resolve.svg',
    ],
    'CMakeSetup.svg': [
        'CMakeSetup32.svg',
        'cmake-gui.svg',
        'cmake.svg',
    ],
    'blender.svg': [
        'Blender.svg',
        'lutris_blender.svg',
        'org.blender.Blender.svg',
    ],
    'alacritty.svg': [
        'Alacritty.svg',
        'com.alacritty.Alacritty.svg',
    ],
    # DO NOT REMOVE: End of link segment
}

install_data(regular_files, install_dir: scalable_apps_iconsdir)

foreach dest_file, link_files_for_dest : link_files
    foreach link_file : link_files_for_dest
        install_symlink(link_file, install_dir: scalable_apps_iconsdir, pointing_to: dest_file)
    endforeach
endforeach
